--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -18,15 +18,11 @@ jobs:
         with:
           java-version: 11
 
-      - name: Access API_KEY
-        env:
-          API_KEY: ${{ secrets.API_KEY }}
-        run: echo API_KEY=\"$API_KEY\" > ./local.properties
-
-      - name: Access BASE_URL
-        env:
-          BASE_URL: $${{ secrets.BASE_URL }}
-        run: echo BASE_URL=\"$BASE_URL\" > ./local.properties
+      - name: Access keys
+        run: |
+          touch ./local.properties
+          echo API_KEY=\"${{ secrets.API_KEY }}\" >> ./local.properties
+          echo BASE_URL=\"${{ secrets.BASE_URL }}\" >> ./local.properties
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
