--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ String getApiKey() {
     def propFile = rootProject.file("./local.properties")
     def properties = new Properties()
     properties.load(new FileInputStream(propFile))
+    def key = properties['API_KEY']
+    println(key)
     return properties['API_KEY']
 }
 
@@ -24,6 +26,8 @@ String getBaseUrl() {
     def propFile = rootProject.file("./local.properties")
     def properties = new Properties()
     properties.load(new FileInputStream(propFile))
+    def key = properties['BASE_URL']
+    println(key)
     return properties['BASE_URL']
 }
 
