--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -29,3 +29,9 @@ jobs:
 
       - name: Build App
         run: ./gradlew assembleDebug
+
+      - name: Build APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: apk
+          path: app/build/outputs/apk/debug/app-debug.apk
