--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
+    // SDP library for UI scaling
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.intuit.ssp:ssp-android:1.1.0'
+
     // Unit test dependencies
     testImplementation 'junit:junit:4.13.2'
 
