--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,6 +112,9 @@ dependencies {
     // Unit test dependencies
     testImplementation 'junit:junit:4.13.2'
 
+    // Truth library
+    testImplementation "com.google.truth:truth:1.1.3"
+
     // Instrumented test dependencies
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
