--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,9 @@ dependencies {
     // Truth library
     testImplementation "com.google.truth:truth:1.1.3"
 
+    // Mockito library
+    testImplementation "org.mockito:mockito-core:4.9.0"
+
     // Instrumented test dependencies
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
