--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,6 +118,12 @@ dependencies {
     // Mockito library
     testImplementation "org.mockito:mockito-core:4.9.0"
 
+    // InstantTaskExecutorRule for unit testing
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    // Coroutines for testing
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
+
     // Instrumented test dependencies
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
