--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,7 +122,10 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // Coroutines for testing
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+
+    // Turbine for testing flow API
+    testImplementation "app.cash.turbine:turbine:0.12.1"
 
     // Instrumented test dependencies
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
